--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Technology geek exploring the ins and outs of technology. Who'd knew?"
   location         : "Belgium"
-  #employer         : "Red Brick University"
+  employer         : 
   uri              : # URL
   email            : "me@justwilhelm.info" 
 
