--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,11 +17,11 @@ main:
   #- title: "Teaching"
   #  url: /teaching/    
     
- # - title: "Portfolio"
-  #  url: /portfolio/
+  - title: "Home"
+    url: /about/
         
-  #- title: "Blog Posts"
-  #  url: /year-archive/
+  - title: "Projects"
+    url: /projects/
     
   - title: "CV"
     url: /cv/
