--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Wilhelm"
   pronouns         : # example: "she/her"  
-  bio              : "Technology geek exploring the ins and outs of technology. Who'd knew?"
+  bio              : "Technology person exploring the ins and outs of technology"
   location         : "Belgium"
   employer         : 
   uri              : # URL
