--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ Name Name:
   name        : "Wilhelm"
   uri         : "https://justwilhelm.info"
   email       : "me@justwilhelm.info"
-  bio         : "Technology geek exploring the ins and outs of technology. Who'd knew?"
+  bio         : "Technology person exploring the ins and outs of technology"
   avatar      : "profile.jpg"
   twitter     : 
   google_plus : 
