--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Wilhelm"
 title_separator          : "-"
 name                     : &name "Wilhelm"
 description              : &description "wilhelm's personal website"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://liechtenberg.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://justwilhelm.info # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "/liechtenberg" # the subpath of your site, e.g. "/blog"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "liechtenberg/liechtenberg.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
