--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Wilhelm"
 title_separator          : "-"
 name                     : &name "Wilhelm"
 description              : &description "wilhelm's personal website"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://justwilhelm.info # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://vanaltert.be # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "liechtenberg/liechtenberg.github.io"
@@ -30,7 +30,7 @@ author:
   location         : "Belgium"
   employer         : 
   uri              : # URL
-  email            : "me@justwilhelm.info" 
+  email            : "wilhelm@vanaltert.be" 
 
   # Academic websites
   academia         : # URL
@@ -61,7 +61,7 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : "liechtenbergs"
+  instagram        : "van.altr"
   lastfm           : # Username
   linkedin         : # Username
   mastodon         : # URL
