--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ repository               : "liechtenberg/liechtenberg.github.io"
 author:
   # Biographic information
   avatar           : "profile.jpg"
-  name             : "Wilhelm"
+  name             : "Wilhelm Van Altert"
   pronouns         : # example: "she/her"  
   bio              : "Technology person exploring the ins and outs of technology"
   location         : "Belgium"
